header and banner designed without responsive

--- a/index.html
+++ b/index.html
@@ -1,169 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/fontawesome-free/css/all.min.css">
-    <link rel="stylesheet" href="./css/pe-icon-7-stroke.css">
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/fontawesome-free/css/all.min.css" />
+    <link rel="stylesheet" href="./css/pe-icon-7-stroke.css" />
+    <link rel="stylesheet" href="./css/slider.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/new-style.css" />
+    <style>
+      
+    </style>
+  </head>
+  <body>
     <div class="body_overlay"></div>
     <div class="offcanvas_menu">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="offcanvas_menu_wrapper">
-                        <div class="canvas_close">
-                            <a href="javascript:void(0)"><i class="ion-android-close"></i></a>
-                        </div>
-                        <div class="welcome_text text-center">
-                            <p>Welcome to Bucker Bakery Shop</p>
-                        </div>
-                        <div id="menu" class="text-left ">
-                            <ul class="offcanvas_main_menu">
-                                <li><a href="javascript:void(0)">Home</a></li>
-                                <li><a href="javascript:void(0)">About Us</a></li>
-                                <li><a href="javascript:void(0)">Pages</a></li>
-                                <li><a href="javascript:void(0)">Shop</a></li>
-                                <li><a href="javascript:void(0)">blog</a></li>
-                                <li><a href="javascript:void(0)">Contact Us</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="offcanvas_menu_wrapper">
+              <div class="canvas_close">
+                <a href="javascript:void(0)"
+                  ><i class="ion-android-close"></i
+                ></a>
+              </div>
+              <div class="welcome_text text-center">
+                <p>Welcome to Bucker Bakery Shop</p>
+              </div>
+              <div id="menu" class="text-left">
+                <ul class="offcanvas_main_menu">
+                  <li><a href="javascript:void(0)">Home</a></li>
+                  <li><a href="javascript:void(0)">About Us</a></li>
+                  <li><a href="javascript:void(0)">Pages</a></li>
+                  <li><a href="javascript:void(0)">Shop</a></li>
+                  <li><a href="javascript:void(0)">blog</a></li>
+                  <li><a href="javascript:void(0)">Contact Us</a></li>
+                </ul>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </div>
     <header class="header_section">
-        <div class="header_top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="header_top_inner d-flex justify-content-between">
-                            <div class="welcome_text">
-                                <p>World Wide Completely Free Returns and Free Shipping</p>
-                            </div>
-                            <div class="header_top_sidebar d-flex align-items-center">
-                                <ul class="d-flex">
-                                    <li><i class="icofont-phone"></i> <a href="tel:+00123456789">+00 123 456 789</a>
-                                    </li>
-                                    <li><i class="icofont-envelope"></i> <a href="mailto:demo@example.com">demo@example.com</a></li>
-                                    <li class="account_link"> <i class="icofont-user-alt-7"></i><a href="#">Account</a>
-                                        <ul class="dropdown_account_link">
-                                            <li><a href="javascript:void(0)">My Account</a></li>
-                                            <li><a href="javascript:void(0)">Login</a></li>
-                                            <li><a href="javascript:void(0)">Contact</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+      <div class="header_top">
         <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="main_header d-flex justify-content-between align-items-center">
-                        <div class="header_logo">
-                            <a class="sticky_none" href="javascript:void(0)"><img src="./images/logo.png" alt=""></a>
-                        </div>
-                        <!--main menu start-->
-                        <div class="main_menu d-none d-lg-block">
-                            <nav>
-                                <ul class="d-flex">
-                                    <li><a class="active" href="javascript:void(0)">Home</a></li>
-                                    <li><a href="javascript:void(0)">About</a></li>
-                                    <li><a href="javascript:void(0)">FAQ</a></li>
-                                    <li><a href="javascript:void(0)">Shop</a></li>
-                                    <li><a href="javascript:void(0)">blog</a></li>
-                                    <li><a href="javascript:void(0)">Contact</a></li>
-                                </ul>
-                            </nav>
-                        </div>
-                        <!--main menu end-->
-                        <div class="header_account">
-                            <ul class="d-flex">
-                                <li class="header_search"><a href="javascript:void(0)"><i class="pe-7s-search"></i></a>
-                                </li>
-                                <li class="header_wishlist"><a href="javascript:void(0)"><i class="pe-7s-like"></i></a></li>
-                                <li class="shopping_cart"><a href="javascript:void(0)"><i class="pe-7s-shopbag"></i></a>
-                                    <span class="item_count">2</span>
-                                </li>
-                            </ul>
-                            <div class="canvas_open">
-                                <a href="javascript:void(0)"><i class="ion-navicon"></i></a>
-                            </div>
-                        </div>
-                    </div>
+          <div class="row">
+            <div class="col-12">
+              <div class="header_top_inner d-flex justify-content-between">
+                <div class="welcome_text">
+                  <p>World Wide Completely Free Returns and Free Shipping</p>
                 </div>
+                <div class="header_top_sidebar d-flex align-items-center">
+                  <ul class="d-flex">
+                    <li>
+                      <i class="icofont-phone"></i>
+                      <a href="tel:+00123456789">+00 123 456 789</a>
+                    </li>
+                    <li>
+                      <i class="icofont-envelope"></i>
+                      <a href="mailto:demo@example.com">demo@example.com</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
+      <div class="container blur-background">
+        <div class="row">
+          <div class="col-12">
+            <div
+              class="main_header d-flex justify-content-between align-items-center"
+            >
+              <div class="header_logo">
+                <a class="sticky_none" href="javascript:void(0)"
+                  ><img src="./images/logo-3.jpeg" alt="" class="logo"
+                /></a>
+              </div>
+              <!--main menu start-->
+              <div class="main_menu d-none d-lg-block">
+                <nav>
+                  <ul class="d-flex">
+                    <li>
+                      <a class="active" href="javascript:void(0)">Home</a>
+                    </li>
+                    <li><a href="javascript:void(0)">About</a></li>
+                    <li><a href="javascript:void(0)">FAQ</a></li>
+                    <li><a href="javascript:void(0)">Shop</a></li>
+                    <li><a href="javascript:void(0)">blog</a></li>
+                    <li><a href="javascript:void(0)">Contact</a></li>
+                  </ul>
+                </nav>
+              </div>
+              <!--main menu end-->
+              <div class="header_account">
+                <div class="canvas_open">
+                  <a href="javascript:void(0)"><i class="ion-navicon"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
-    <div class="mini_cart">
-        <div class="cart_gallery">
-            <div class="cart_close">
-                <div class="cart_text">
-                    <h3>cart</h3>
-                </div>
-                <div class="mini_cart_close">
-                    <a href="javascript:void(0)"><i class="ion-android-close"></i></a>
-                </div>
-            </div>
-            <div class="cart_item">
-                <div class="cart_img">
-                    <a href="javascript:void(0)"><img src="./images/product1.png" alt=""></a>
-                </div>
-                <div class="cart_info">
-                    <a href="javascript:void(0)">Primis In Faucibus</a>
-                    <p>1 x <span> $65.00 </span></p>
-                </div>
-                <div class="cart_remove">
-                    <a href="#"><i class="ion-android-close"></i></a>
-                </div>
-            </div>
-            <div class="cart_item">
-                <div class="cart_img">
-                    <a href="javascript:void(0)"><img src="./images/product2.png" alt=""></a>
-                </div>
-                <div class="cart_info">
-                    <a href="javascript:void(0)">Letraset Sheets</a>
-                    <p>1 x <span> $60.00 </span></p>
-                </div>
-                <div class="cart_remove">
-                    <a href="#"><i class="ion-android-close"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="mini_cart_table">
-            <div class="cart_table_border">
-                <div class="cart_total">
-                    <span>Sub total:</span>
-                    <span class="price">$125.00</span>
-                </div>
-                <div class="cart_total mt-10">
-                    <span>total:</span>
-                    <span class="price">$125.00</span>
-                </div>
-            </div>
-        </div>
-        <div class="mini_cart_footer">
-            <div class="cart_button">
-                <a href="javascript:void(0)">View cart</a>
-            </div>
-            <div class="cart_button">
-                <a href="javascript:void(0)"><i class="fa fa-sign-in"></i> Checkout</a>
-            </div>
-        </div>
-    </div>
 
+    <section class="slider-main">
+      <div class="container-slide-content">
+        <div class="slider-content-wrap">
+          <div class="slider-content">
+            <h2 id="heading" class="heading-style-2">
+              Apple AirPods Max Wireless Over-Ear Headphones.
+            </h2>
+            <p id="description">
+              Active Noise Cancelling, Transparency Mode, Spatial Audio, Digital
+              Crown for Volume Control. Bluetooth Headphones for iPhone
+            </p>
+            <h3 id="price" class="heading-style-2">$779.99</h3>
+          </div>
+        </div>
+      </div>
+      <div class="slider-images">
+        <img
+          class="slider-image"
+          src="./images/food1.png"
+          alt="headphone image"
+        />
+        <img
+          class="slider-image"
+          src="./images/food2.png"
+          alt="headphone image"
+        />
+        <img
+          class="slider-image"
+          src="./images/food3.png"
+          alt="headphone image"
+        />
+        <img
+          class="slider-image"
+          src="./images/food4.png"
+          alt="headphone image"
+        />
+      </div>
+      <div id="backgrounds">
+        <div
+          class="background"
+          style="
+            background: radial-gradient(
+              50% 50% at 50% 50%,
+              #c7f6d0 0%,
+              #7cb686 92.19%
+            );
+          "
+        ></div>
+        <div
+          class="background"
+          style="
+            background: radial-gradient(
+              50% 50% at 50% 50%,
+              #d1e4f6 0%,
+              #5f9ccf 100%
+            );
+          "
+        ></div>
+        <div
+          class="background"
+          style="
+            background: radial-gradient(
+              50% 50% at 50% 50%,
+              #ffb7b2 0%,
+              #ed746e 100%
+            );
+          "
+        ></div>
+        <div
+          class="background"
+          style="
+            background: radial-gradient(
+              50% 50% at 50% 50%,
+              #d7d7d7 0%,
+              #979797 100%
+            );
+          "
+        ></div>
+        <div
+          class="background"
+          style="
+            background: radial-gradient(
+              50% 50% at 50% 50%,
+              #6b6b6b 0%,
+              #292929 100%
+            );
+          "
+        ></div>
+      </div>
+    </section>
 
     <script src="./js/jQuery.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/main.js"></script>
-</body>
+    <script src="./js/slider.js"></script>
+  </body>
 </html>
