header and slider done

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./css/fontawesome-free/css/all.min.css" />
+    <!-- <link rel="stylesheet" href="./css/fontawesome-free/css/all.min.css" /> -->
+    <link rel="stylesheet" href="./css/ionicons.min.css" />
     <link rel="stylesheet" href="./css/pe-icon-7-stroke.css" />
     <link rel="stylesheet" href="./css/slider.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -45,7 +46,7 @@
       </div>
     </div>
     <header class="header_section">
-      <div class="header_top">
+      <!-- <div class="header_top">
         <div class="container">
           <div class="row">
             <div class="col-12">
@@ -69,12 +70,12 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="container blur-background">
+      </div> -->
+      <div class="container">
         <div class="row">
           <div class="col-12">
             <div
-              class="main_header d-flex justify-content-between align-items-center"
+              class="main_header blur-background d-flex justify-content-between align-items-center"
             >
               <div class="header_logo">
                 <a class="sticky_none" href="javascript:void(0)"
@@ -112,14 +113,9 @@
       <div class="container-slide-content">
         <div class="slider-content-wrap">
           <div class="slider-content">
-            <h2 id="heading" class="heading-style-2">
-              Apple AirPods Max Wireless Over-Ear Headphones.
-            </h2>
-            <p id="description">
-              Active Noise Cancelling, Transparency Mode, Spatial Audio, Digital
-              Crown for Volume Control. Bluetooth Headphones for iPhone
-            </p>
-            <h3 id="price" class="heading-style-2">$779.99</h3>
+            <h2 id="heading" class="heading-style-2"></h2>
+            <p id="description"></p>
+            <h3 id="price" class="heading-style-2"></h3>
           </div>
         </div>
       </div>
