slider done with text animation like typing

--- a/index.html
+++ b/index.html
@@ -1,52 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Food</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css" />
-    <!-- <link rel="stylesheet" href="./css/fontawesome-free/css/all.min.css" /> -->
-    <link rel="stylesheet" href="./css/ionicons.min.css" />
-    <link rel="stylesheet" href="./css/pe-icon-7-stroke.css" />
-    <link rel="stylesheet" href="./css/slider.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/new-style.css" />
-    <style>
-      
-    </style>
-  </head>
-  <body>
-    <div class="body_overlay"></div>
-    <div class="offcanvas_menu">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div class="offcanvas_menu_wrapper">
-              <div class="canvas_close">
-                <a href="javascript:void(0)"
-                  ><i class="ion-android-close"></i
-                ></a>
-              </div>
-              <div class="welcome_text text-center">
-                <p>Welcome to Bucker Bakery Shop</p>
-              </div>
-              <div id="menu" class="text-left">
-                <ul class="offcanvas_main_menu">
-                  <li><a href="javascript:void(0)">Home</a></li>
-                  <li><a href="javascript:void(0)">About Us</a></li>
-                  <li><a href="javascript:void(0)">Pages</a></li>
-                  <li><a href="javascript:void(0)">Shop</a></li>
-                  <li><a href="javascript:void(0)">blog</a></li>
-                  <li><a href="javascript:void(0)">Contact Us</a></li>
-                </ul>
-              </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Food</title>
+  <link rel="stylesheet" href="./css/bootstrap.min.css" />
+  <!-- <link rel="stylesheet" href="./css/fontawesome-free/css/all.min.css" /> -->
+  <link rel="stylesheet" href="./css/ionicons.min.css" />
+  <link rel="stylesheet" href="./css/pe-icon-7-stroke.css" />
+  <link rel="stylesheet" href="./css/slider.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/new-style.css" />
+  <style>
+
+  </style>
+</head>
+<body>
+  <div class="body_overlay"></div>
+  <div class="offcanvas_menu">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="offcanvas_menu_wrapper">
+            <div class="canvas_close">
+              <a href="javascript:void(0)"><i class="ion-android-close"></i></a>
+            </div>
+            <div class="welcome_text text-center">
+              <p>Welcome to Bucker Bakery Shop</p>
+            </div>
+            <div id="menu" class="text-left">
+              <ul class="offcanvas_main_menu">
+                <li><a href="javascript:void(0)">Home</a></li>
+                <li><a href="javascript:void(0)">About Us</a></li>
+                <li><a href="javascript:void(0)">Pages</a></li>
+                <li><a href="javascript:void(0)">Shop</a></li>
+                <li><a href="javascript:void(0)">blog</a></li>
+                <li><a href="javascript:void(0)">Contact Us</a></li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <header class="header_section">
-      <!-- <div class="header_top">
+  </div>
+  <header class="header_section">
+    <!-- <div class="header_top">
         <div class="container">
           <div class="row">
             <div class="col-12">
@@ -71,133 +69,98 @@
           </div>
         </div>
       </div> -->
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div
-              class="main_header blur-background d-flex justify-content-between align-items-center"
-            >
-              <div class="header_logo">
-                <a class="sticky_none" href="javascript:void(0)"
-                  ><img src="./images/logo-3.jpeg" alt="" class="logo"
-                /></a>
-              </div>
-              <!--main menu start-->
-              <div class="main_menu d-none d-lg-block">
-                <nav>
-                  <ul class="d-flex">
-                    <li>
-                      <a class="active" href="javascript:void(0)">Home</a>
-                    </li>
-                    <li><a href="javascript:void(0)">About</a></li>
-                    <li><a href="javascript:void(0)">FAQ</a></li>
-                    <li><a href="javascript:void(0)">Shop</a></li>
-                    <li><a href="javascript:void(0)">blog</a></li>
-                    <li><a href="javascript:void(0)">Contact</a></li>
-                  </ul>
-                </nav>
-              </div>
-              <!--main menu end-->
-              <div class="header_account">
-                <div class="canvas_open">
-                  <a href="javascript:void(0)"><i class="ion-navicon"></i></a>
-                </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="main_header blur-background d-flex justify-content-between align-items-center">
+            <div class="header_logo">
+              <a class="sticky_none" href="javascript:void(0)"><img src="./images/logo-3.jpeg" alt="" class="logo" /></a>
+            </div>
+            <!--main menu start-->
+            <div class="main_menu d-none d-lg-block">
+              <nav>
+                <ul class="d-flex">
+                  <li>
+                    <a class="active" href="javascript:void(0)">Home</a>
+                  </li>
+                  <li><a href="javascript:void(0)">About</a></li>
+                  <li><a href="javascript:void(0)">FAQ</a></li>
+                  <li><a href="javascript:void(0)">Shop</a></li>
+                  <li><a href="javascript:void(0)">blog</a></li>
+                  <li><a href="javascript:void(0)">Contact</a></li>
+                </ul>
+              </nav>
+            </div>
+            <!--main menu end-->
+            <div class="header_account">
+              <div class="canvas_open">
+                <a href="javascript:void(0)"><i class="ion-navicon"></i></a>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </header>
+    </div>
+  </header>
 
-    <section class="slider-main">
-      <div class="container-slide-content">
-        <div class="slider-content-wrap">
-          <div class="slider-content">
-            <h2 id="heading" class="heading-style-2"></h2>
-            <p id="description"></p>
-            <h3 id="price" class="heading-style-2"></h3>
-          </div>
+  <section class="slider-main">
+    <div class="container-slide-content">
+      <div class="slider-content-wrap">
+        <div class="slider-content" id="slider-content">
+          <h2 id="heading" class="heading-style-2"></h2>
+          <p id="description"></p>
+          <h3 id="price" class="heading-style-2"></h3>
         </div>
       </div>
-      <div class="slider-images">
-        <img
-          class="slider-image"
-          src="./images/food1.png"
-          alt="headphone image"
-        />
-        <img
-          class="slider-image"
-          src="./images/food2.png"
-          alt="headphone image"
-        />
-        <img
-          class="slider-image"
-          src="./images/food3.png"
-          alt="headphone image"
-        />
-        <img
-          class="slider-image"
-          src="./images/food4.png"
-          alt="headphone image"
-        />
-      </div>
-      <div id="backgrounds">
-        <div
-          class="background"
-          style="
+    </div>
+    <div class="slider-images">
+      <img class="slider-image" src="./images/food1.png" alt="headphone image" />
+      <img class="slider-image" src="./images/food2.png" alt="headphone image" />
+      <img class="slider-image" src="./images/food3.png" alt="headphone image" />
+      <img class="slider-image" src="./images/food4.png" alt="headphone image" />
+    </div>
+    <div id="backgrounds">
+      <div class="background" style="
             background: radial-gradient(
               50% 50% at 50% 50%,
               #c7f6d0 0%,
               #7cb686 92.19%
             );
-          "
-        ></div>
-        <div
-          class="background"
-          style="
+          "></div>
+      <div class="background" style="
             background: radial-gradient(
               50% 50% at 50% 50%,
               #d1e4f6 0%,
               #5f9ccf 100%
             );
-          "
-        ></div>
-        <div
-          class="background"
-          style="
+          "></div>
+      <div class="background" style="
             background: radial-gradient(
               50% 50% at 50% 50%,
               #ffb7b2 0%,
               #ed746e 100%
             );
-          "
-        ></div>
-        <div
-          class="background"
-          style="
+          "></div>
+      <div class="background" style="
             background: radial-gradient(
               50% 50% at 50% 50%,
               #d7d7d7 0%,
               #979797 100%
             );
-          "
-        ></div>
-        <div
-          class="background"
-          style="
+          "></div>
+      <div class="background" style="
             background: radial-gradient(
               50% 50% at 50% 50%,
               #6b6b6b 0%,
               #292929 100%
             );
-          "
-        ></div>
-      </div>
-    </section>
+          "></div>
+    </div>
+  </section>
 
-    <script src="./js/jQuery.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/slider.js"></script>
-  </body>
+  <script src="./js/jQuery.js"></script>
+  <script src="./js/bootstrap.min.js"></script>
+  <script src="./js/main.js"></script>
+  <script src="./js/slider.js"></script>
+</body>
 </html>
