--- a/index.html
+++ b/index.html
@@ -46,31 +46,6 @@
       </div>
     </div>
     <header class="header_section">
-      <!-- <div class="header_top">
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <div class="header_top_inner d-flex justify-content-between">
-                <div class="welcome_text">
-                  <p>World Wide Completely Free Returns and Free Shipping</p>
-                </div>
-                <div class="header_top_sidebar d-flex align-items-center">
-                  <ul class="d-flex">
-                    <li>
-                      <i class="icofont-phone"></i>
-                      <a href="tel:+00123456789">+00 123 456 789</a>
-                    </li>
-                    <li>
-                      <i class="icofont-envelope"></i>
-                      <a href="mailto:demo@example.com">demo@example.com</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -108,7 +83,6 @@
         </div>
       </div>
     </header>
-
     <section class="slider-main">
       <div class="container-slide-content">
         <div class="slider-content-wrap">
@@ -194,6 +168,52 @@
         ></div>
       </div>
     </section>
+    <div class="service_section mb-86">
+      <div class="container">
+          <div class="row">
+              <div class="col-12">
+                  <div class="services_section_inner d-flex justify-content-between">
+                      <div class="single_services one text-center wow fadeInUp" data-wow-delay="0.1s" data-wow-duration="1.1s" style="visibility: visible; animation-duration: 1.1s; animation-delay: 0.1s; animation-name: fadeInUp;">
+                          <div class="services_thumb">
+                              <img src="./images/products/services1.webp" alt="">
+                          </div>
+                          <div class="services_content">
+                              <h3><a href="javascript:void(0)">Pastry</a></h3>
+                              <p>Lorem ipsum dolor sit ametgtol consecr adipiscing elit.</p>
+                          </div>
+                      </div>
+                      <div class="single_services two text-center wow fadeInUp" data-wow-delay="0.2s" data-wow-duration="1.2s" style="visibility: visible; animation-duration: 1.2s; animation-delay: 0.2s; animation-name: fadeInUp;">
+                          <div class="services_thumb">
+                              <img src="./images/products/services2.webp" alt="">
+                          </div>
+                          <div class="services_content">
+                              <h3><a href="javascript:void(0)">Breakfast</a></h3>
+                              <p>Lorem ipsum dolor sit ametgtol consecr adipiscing elit.</p>
+                          </div>
+                      </div>
+                      <div class="single_services three text-center wow fadeInUp" data-wow-delay="0.3s" data-wow-duration="1.3s" style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
+                          <div class="services_thumb">
+                              <img src="./images/products/services3.webp" alt="">
+                          </div>
+                          <div class="services_content">
+                              <h3><a href="javascript:void(0)">Cofee Cake</a></h3>
+                              <p>Lorem ipsum dolor sit ametgtol consecr adipiscing elit.</p>
+                          </div>
+                      </div>
+                      <div class="single_services four text-center wow fadeInUp" data-wow-delay="0.4s" data-wow-duration="1.4s" style="visibility: visible; animation-duration: 1.4s; animation-delay: 0.4s; animation-name: fadeInUp;">
+                          <div class="services_thumb">
+                              <img src="./images/products/services4.webp" alt="">
+                          </div>
+                          <div class="services_content">
+                              <h3><a href="javascript:void(0)">Bake Tost</a></h3>
+                              <p>Lorem ipsum dolor sit ametgtol consecr adipiscing elit.</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
 
     <script src="./js/jQuery.js"></script>
     <script src="./js/bootstrap.min.js"></script>
